small fixes. reports ordering properly